--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+color-eyre = "0.6.2"
+serde = { version = "1.0.171", features = ["derive"] }
+serde_json = "1.0.101"
