--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 color-eyre = "0.6.2"
+humansize = "2.1.3"
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.101"
