--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+argh = "0.1.10"
 color-eyre = "0.6.2"
 humansize = "2.1.3"
 serde = { version = "1.0.171", features = ["derive"] }
